[gd_scene load_steps=3 format=3 uid="uid://3yx126jx5y0c"]

[ext_resource type="Script" uid="uid://8su8gwb3cmui" path="res://scripts/things/PickUp.gd" id="1_nylg6"]
[ext_resource type="Texture2D" uid="uid://rktd3lc6ncfm" path="res://imgs/pickups/plasma_rifle.png" id="3_lso06"]

[node name="PlasmaRifle" type="Node2D"]
z_index = 999
script = ExtResource("1_nylg6")
type_id = 3

[node name="Icon" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.19, 0.19)
texture = ExtResource("3_lso06")
region_enabled = true
region_rect = Rect2(0, 29.762863, 65, 35.237137)
